# wirtualny_swiat_JPO

./: CMakeLists.txt  main.cpp
include/: Swiat.h  Wyswietlanie.h
include/organizmy/: Organizm.h  Roslina.h  Zwierze.h
include/organizmy/rosliny/: Koka.h  Mlecz.h  Trawa.h
include/organizmy/zwierzeta/: Goryl.h  Jez.h  Lis.h  Owca.h  Wilk.h
src/: Swiat.cpp  Wyswietlanie.cpp
src/organizmy/: Organizm.cpp  Roslina.cpp  Zwierze.cpp
src/organizmy/rosliny/: Koka.cpp  Mlecz.cpp  Trawa.cpp
src/organizmy/zwierzeta/: Goryl.cpp  Jez.cpp  Lis.cpp  Owca.cpp  Wilk.cpp
